fixed all paths

--- a/proj4/index.html
+++ b/proj4/index.html
@@ -74,7 +74,7 @@ create the constraints between pairs of masses.
 		<br>
 		<tr>
 			<td>
-				<img src="images/part1/no_sear.png" align="middle" width="500px" />
+				<img src="images/part1/no_shear.png" align="middle" width="500px" />
 				<figcaption align="middle">No shear constraints</figcaption>
 			</td>
 			<td>
@@ -168,6 +168,9 @@ The cloth rested on the sphere with different appearance depending on the value 
 				<img src="images/part3/ks_5000.png" align="middle" width="500px" />
 				<figcaption align="middle">Ks=5000</figcaption>
 			</td>
+    </tr>
+    <br>
+    <tr>
       <td>
 				<img src="images/part3/ks_50000.png" align="middle" width="500px" />
 				<figcaption align="middle">Ks=50000</figcaption>
@@ -200,6 +203,9 @@ result was very satisfying!
 				<img src="images/part4/two.png" align="middle" width="500px" />
 				<figcaption align="middle">Halfway</figcaption>
 			</td>
+    </tr>
+    <br>
+    <tr>
       <td>
 				<img src="images/part4/three.png" align="middle" width="500px" />
 				<figcaption align="middle">Cloth at rest</figcaption>
@@ -283,6 +289,9 @@ result was very satisfying!
   				<img src="images/part5/cloth_bump.png" align="middle" width="500px" />
   				<figcaption align="middle">Bump Mapping on the Cloth</figcaption>
   			</td>
+      </tr>
+      <br>
+      <tr>
         <td>
   				<img src="images/part5/sphere_displacement.png" align="middle" width="500px" />
   				<figcaption align="middle">Displacement Mapping on the sphere</figcaption>
@@ -299,18 +308,18 @@ result was very satisfying!
   				<figcaption align="middle">Bump mapping with -o 16 -a 16</figcaption>
   			</td>
   			<td>
-  				<img src="images/part4/16_disp.png" align="middle" width="500px" />
+  				<img src="images/part5/16_disp.png" align="middle" width="500px" />
   				<figcaption align="middle">Displacement mapping, same settings</figcaption>
   			</td>
       </tr>
       <br>
       <tr>
   			<td>
-  				<img src="images/part5/high_density.png" align="middle" width="500px" />
+  				<img src="images/part5/128_bump.png" align="middle" width="500px" />
   				<figcaption align="middle">Bump mapping -o 128 -a 128</figcaption>
   			</td>
   			<td>
-  				<img src="images/part4/low_ks.png" align="middle" width="500px" />
+  				<img src="images/part5/128_disp.png" align="middle" width="500px" />
   				<figcaption align="middle">Displacement same settings</figcaption>
   			</td>
       </tr>
