--- a/proj4/index.html
+++ b/proj4/index.html
@@ -207,7 +207,7 @@ result was very satisfying!
     <br>
     <tr>
       <td>
-				<img src="images/part4/three.png" align="middle" width="500px" />
+				<img src="images/part4/rest.png" align="middle" width="500px" />
 				<figcaption align="middle">Cloth at rest</figcaption>
 			</td>
 		</tr>
