--- a/proj4/index.html
+++ b/proj4/index.html
@@ -235,6 +235,8 @@ result was very satisfying!
   The Blinn-Phong model combines three simulated lighting effects: specular, ambient and diffuse lighting. It computes each of these lighting terms and sums them up,
   leading to a more realistic lighting effect with diffuse lighting. The Blinn-Phong shader captures a more varied lighting effect that varies across the surface
   depending on the position of the light source. One can observe the combination of the three lighting terms in the associated screenshots.
+  <br>
+  Parameters: Ka = 0.1, Ia is a vec4 of all 1s, Kd = 0.5, Ks = 0.5, p = 100. 
   <div align="middle">
   	<table style="width=100%">
   		<tr>
