--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<a href="/proj3-2/index.html">Project 3-2</a>
 		<br><br>
 		<a href="/proj4/index.html">Project 4</a>
+		<br><br>
+		<a href="/final/doc/index.html">Final</a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
